z-index problem in Chrome half-way fixed, still a major issue in Safari …

--- a/main.css
+++ b/main.css
@@ -208,8 +208,8 @@ where {
 	bottom: 50%;
 	display: block;
 	pointer-events: none;
-	z-index: 8;
-	-webkit-transform: translateZ(7);
+	z-index: 11;
+	-webkit-transform: translateZ(10);
 
 }
 
@@ -231,8 +231,8 @@ where {
 	pointer-events: none;
 	bottom: 50%;
 	max-height: 50%;
-	z-index: 8;
-	-webkit-transform: translateZ(7);
+	z-index: 11;
+	-webkit-transform: translateZ(10);
 
 }
 
@@ -252,8 +252,8 @@ where {
 	display: block;
 	pointer-events: none;
 	bottom: 34px;
-	z-index: 11;
-	-webkit-transform: translateZ(10);
+	z-index: 13;
+	-webkit-transform: translateZ(12);
 
 }
 
@@ -275,8 +275,8 @@ where {
 	display: block;
 	pointer-events: none;
 	max-height: 50%;
-	z-index: 8;
-	-webkit-transform: translateZ(7);
+	z-index: 12;
+	-webkit-transform: translateZ(11);
 }
 
 #mainlabel.search there {
@@ -597,8 +597,8 @@ images {
     list-style-type: none;
 	height: auto;
 	pointer-events: none;
-	z-index: 12;
-	-webkit-transform: translateZ(11);
+	z-index: 14;
+	-webkit-transform: translateZ(13);
 
 }
 
